<resources>
    <string name="app_name">PerKid</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register">Register</string>
    <string name="parent">Parent</string>
    <string name="kid">Kid</string>
    <string name="already_member">Already Member?</string>
    <string name="do_not_have_account">Don\'t Have Account?</string>
    <string name="account_type">Account Type</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="pinterest">Pinterest</string>
    <string name="twitter">twitter</string>
    <string name="snapchat">Snapchat</string>
    <string name="text_number">74</string>
    <string name="kid_username">Kid Username (If You are a Parent)</string>
    <string name="empty_view">Your kid have never browsed \n anything yet</string>
    <string name="emergency">911</string>
    <string name="parent_mobile_number">Parent Mobile Number</string>

    <!--Content Description-->
    <string name="image_signout">image_signout</string>
    <string name="image_social_media">image_social_media</string>
    <string name="image_splash">image_splash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
