<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/cardView_registerLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="6dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_register" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_registerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_textInputLayout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/username"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_textInputLayout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/password"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/register_textInputLayout_confirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/confirm_password"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/register_text_accountType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/account_type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <RadioGroup
                        android:id="@+id/radioGroup_accountType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:padding="8dp">


                        <RadioButton
                            android:id="@+id/radioButton_parent"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/parent"
                            android:textColor="@color/colorGrey"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/radioButton_kid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/kid"
                            android:textColor="@color/colorGrey"
                            android:textSize="12sp" />
                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/already_member"
                            android:textColor="@color/colorAccent"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/register_text_signIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="@string/sign_in"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/background_button"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>