<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="50dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/cardView_signInLayout"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:layout_width="45dp"
                android:layout_height="6dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_signIn" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardView_signInLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="40dp"
                    android:paddingBottom="40dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/username"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:hint="@string/password"
                        app:hintAnimationEnabled="false">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textSize="14sp" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/text_forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="20dp"
                        android:text="@string/forget_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/background_button"
        android:padding="16dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>